--- a/front-end/my-shopping-assistant/package.json
+++ b/front-end/my-shopping-assistant/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -47,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
